feat: header finito

--- a/index.html
+++ b/index.html
@@ -14,15 +14,37 @@
             <img class="logo-banner" src="img/logo.svg" alt="The Booleaner">
         </div>
         <!-- /Logo -->
+
+    </section>
+    <section class="titolo-e-sottotitolo">
+        <!--Titolo-->
         <div class="titolo1">
             <h1>Internet deve essere al servizio del ''bene pubblico'': il manifesto di Tim Berners-Lee</h1>
         </div>
+        <!--/Titolo-->
 
-    </section>
-   
+        <!--Sottotitolo-->
+        <div>
+            <h2 class="sottotitolo">
+                <span class="grigio">Scritto da</span> 
+                <span class="nomeblu">The Booleaner</span>
+            </h2>
+        </div>
+        <div class="data-sottotitolo">
+            <p class="grigio">il 10/10/2020</p>
+        </div>
+        <!--/Sottotitolo-->
+          </section>
 </header>
 <!-- Banner, titolo e sottotitolo-->
 <body>
+    
+    <section>
+        <div>
+
+        </div>
+
+    </section>
     
 </body>
 </html>
