feat: immagini e primi due paragrafi

--- a/index.html
+++ b/index.html
@@ -38,13 +38,34 @@
 </header>
 <!-- Banner, titolo e sottotitolo-->
 <body>
-    
+    <!-- Foto Tim e descrizioni-->
     <section>
         <div>
-
+            <img src="img/tim-1.jpg" alt="Foto Tim">
+            <img src="img/tim-2.jpg" alt="Foto Tim">
+        </div>
+        <div class="descrizioni-foto">
+            <p class="paragrafi-foto">1st Photo: John S. and James L. Knight foundation, by Scott Henrichsen</p>
+            <p class="paragrafi-foto">2nd Photo: Wikimedia, by Paul Clarke</p>
         </div>
 
     </section>
-    
+    <!-- /Foto Tim e descrizioni-->
+    <main>
+        <!--Paragrafo e lista-->
+        <div>
+            <p class="primo-lorem">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius, doloremque incidunt, ipsam non expedita odit minima error quo, saepe soluta veritatis accusantium dolores exercitationem corrupti nisi necessitatibus impedit eveniet quia.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius, doloremque incidunt, ipsam non expedita odit minima error quo, saepe soluta veritatis accusantium dolores exercitationem corrupti nisi necessitatibus impedit eveniet quia.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius, doloremque incidunt, ipsam non expedita odit minima error quo, saepe soluta veritatis accusantium dolores exercitationem corrupti nisi necessitatibus impedit eveniet quia.
+            </p>
+            <ul>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias maxime, sapiente quasi nulla officia corporis ipsam maiores a unde eveniet? Deleniti nisi quae reprehenderit, pariatur architecto non quos facere odio!</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab veniam dignissimos minus eveniet labore ad at quibusdam distinctio, sunt consectetur perferendis necessitatibus perspiciatis qui totam explicabo mollitia eligendi cupiditate dolor.</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, laboriosam corrupti, blanditiis cum consequatur eligendi obcaecati vitae deserunt repellat eaque laudantium, hic veritatis error inventore fugit consectetur dolorem numquam. Inventore.</li>
+            </ul>
+        </div>
+        <!--/Paragrafo e lista-->
+    </main>
 </body>
 </html>
