--- a/index.html
+++ b/index.html
@@ -53,19 +53,79 @@
     <!-- /Foto Tim e descrizioni-->
     <main>
         <!--Paragrafo e lista-->
-        <div>
-            <p class="primo-lorem">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius, doloremque incidunt, ipsam non expedita odit minima error quo, saepe soluta veritatis accusantium dolores exercitationem corrupti nisi necessitatibus impedit eveniet quia.
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius, doloremque incidunt, ipsam non expedita odit minima error quo, saepe soluta veritatis accusantium dolores exercitationem corrupti nisi necessitatibus impedit eveniet quia.
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius, doloremque incidunt, ipsam non expedita odit minima error quo, saepe soluta veritatis accusantium dolores exercitationem corrupti nisi necessitatibus impedit eveniet quia.
-            </p>
-            <ul>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias maxime, sapiente quasi nulla officia corporis ipsam maiores a unde eveniet? Deleniti nisi quae reprehenderit, pariatur architecto non quos facere odio!</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab veniam dignissimos minus eveniet labore ad at quibusdam distinctio, sunt consectetur perferendis necessitatibus perspiciatis qui totam explicabo mollitia eligendi cupiditate dolor.</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, laboriosam corrupti, blanditiis cum consequatur eligendi obcaecati vitae deserunt repellat eaque laudantium, hic veritatis error inventore fugit consectetur dolorem numquam. Inventore.</li>
-            </ul>
-        </div>
-        <!--/Paragrafo e lista-->
+        <section>
+            <div>
+                <p class="primo-lorem">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius, doloremque incidunt, ipsam non expedita odit minima error quo, saepe soluta veritatis accusantium dolores exercitationem corrupti nisi necessitatibus impedit eveniet quia.
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. <span class="yellow-underline">Eius, doloremque incidunt, ipsam non expedita odit</span> minima error quo, saepe soluta veritatis accusantium dolores exercitationem corrupti nisi necessitatibus impedit eveniet quia.
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius, doloremque incidunt, ipsam non expedita odit minima error quo, saepe soluta veritatis accusantium dolores exercitationem corrupti nisi necessitatibus impedit eveniet quia.
+                </p>
+                <ul>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias maxime, sapiente quasi nulla officia corporis ipsam maiores a unde eveniet? Deleniti nisi quae reprehenderit, pariatur architecto non quos facere odio!</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab veniam dignissimos minus eveniet labore ad at quibusdam distinctio, sunt consectetur perferendis necessitatibus perspiciatis qui totam explicabo mollitia eligendi cupiditate dolor.</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, laboriosam corrupti, blanditiis cum consequatur eligendi obcaecati vitae deserunt repellat eaque laudantium, hic veritatis error inventore fugit consectetur dolorem numquam. Inventore.</li>
+                </ul>
+            </div>
+        </section>
+         <!--/Paragrafo e lista-->
+
+         <!--Tabella-->
+        <section>
+            <div>
+                <table>
+                    <thead class="titolo-tabella">
+                        <tr>
+                            <th>Lorem ipsum dolor</th>
+                            <th>Lorem ipsum dolor</th>
+                            <th>Lorem ipsum dolor</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="corpo-tabella">
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat voluptas molestias cumque accusantium, illum minima? Quis consequuntur harum quos, praesentium qui fugiat, esse voluptatum repudiandae ea reiciendis saepe. Sit, dignissimos!</td>
+                        </tr>
+                        <tr>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat voluptas molestias cumque accusantium, illum minima? Quis consequuntur harum quos, praesentium qui fugiat, esse voluptatum repudiandae ea reiciendis saepe. Sit, dignissimos!</td>
+                        </tr>
+                        <tr class="corpo-tabella">
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat voluptas molestias cumque accusantium, illum minima? Quis consequuntur harum quos, praesentium qui fugiat, esse voluptatum repudiandae ea reiciendis saepe. Sit, dignissimos!</td>
+                        </tr>
+
+                    </tbody>
+                </table>
+            </div>
+        </section>
+        <!--/Tabella-->
+
+        <!--Paragrafo Finale-->
+          <section>
+            <div>
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut laboriosam placeat ipsam quas architecto molestiae esse exercitationem qui reiciendis corrupti nihil iusto eveniet consequatur quo laudantium explicabo asperiores, vel sequi?
+                    <span class="yellow-underline">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span> Aut laboriosam placeat ipsam quas architecto molestiae esse exercitationem qui reiciendis corrupti nihil iusto eveniet consequatur quo laudantium explicabo asperiores, vel sequi?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut laboriosam placeat ipsam quas architecto molestiae esse exercitationem qui reiciendis corrupti nihil iusto eveniet consequatur quo laudantium explicabo asperiores, vel sequi? 
+                </p>
+            </div>
+          </section>
+        <!--/Paragrafo Finale-->
     </main>
 </body>
+<!--Titolo e foto chiusura-->
+<footer>   
+    <section>
+        <div class="grigio">
+            <p>Potrebbero interessarti</p>
+        </div>
+        <div>
+            <p class="scritta-immagine">Lorem ipsum dolor</p>
+            <p class="scritta-immagine2">Lorem ipsum dolor</p>   
+        </div>
+    </section>  
+</footer>
+<!--Titolo e foto chiusura-->
 </html>
