feat: correzione margine ultimo paragrafo

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <!--/Tabella-->
 
         <!--Paragrafo Finale-->
-          <section>
+          <section class="paragrafo-finale">
             <div>
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut laboriosam placeat ipsam quas architecto molestiae esse exercitationem qui reiciendis corrupti nihil iusto eveniet consequatur quo laudantium explicabo asperiores, vel sequi?
                     <span class="yellow-underline">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span> Aut laboriosam placeat ipsam quas architecto molestiae esse exercitationem qui reiciendis corrupti nihil iusto eveniet consequatur quo laudantium explicabo asperiores, vel sequi?
