feat : correzioni in classe

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>The Booleaner</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<!-- Banner, titolo e sottotitolo-->
+
+<body>
+    <!-- Banner, titolo e sottotitolo-->
 <header>
     <section>
         <!-- Logo -->
@@ -27,17 +29,16 @@
         <div>
             <h2 class="sottotitolo">
                 <span class="grigio">Scritto da</span> 
-                <span class="nomeblu">The Booleaner</span>
+                <span class="nomeblu">The Booleaner</span> <br>
             </h2>
         </div>
         <div class="data-sottotitolo">
-            <p class="grigio">il 10/10/2020</p>
+            <span class="grigio">il 10/10/2020</span>
         </div>
         <!--/Sottotitolo-->
           </section>
 </header>
 <!-- Banner, titolo e sottotitolo-->
-<body>
     <!-- Foto Tim e descrizioni-->
     <section>
         <div>
@@ -121,9 +122,9 @@
         <div class="grigio">
             <p>Potrebbero interessarti</p>
         </div>
-        <div>
-            <p class="scritta-immagine">Lorem ipsum dolor</p>
-            <p class="scritta-immagine2">Lorem ipsum dolor</p>   
+        <div class="immagini-finali">
+            <span class="scritta-immagine">Lorem ipsum dolor</span> 
+            <span class="scritta-immagine2">Lorem ipsum dolor</span>   
         </div>
     </section>  
 </footer>
