feat: correzione tabella

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <tr>
                             <th>Lorem ipsum dolor</th>
                             <th>Lorem ipsum dolor</th>
-                            <th>Lorem ipsum dolor</th>
+                            <th id="terza-colonna">Lorem ipsum dolor</th>
                         </tr>
                     </thead>
                     <tbody>
